ipc/ipdl/test/ipdl/error/unreachedDelete.ipdl
protocol unreachedDelete {
child:  M1(); __delete__();

state S1:  send M1 goto S1;
};
